Fix bug where table selector would wrap in Chrome

--- a/project/static/css/styles.css
+++ b/project/static/css/styles.css
@@ -44,6 +44,10 @@ textarea {
     overflow: auto;
 }
 
+#query {
+    min-width: 210px;
+}
+
 /* --------------------------- Horizontal scrolling field */
 
 div.horizontal {
